--- a/css/slider.css
+++ b/css/slider.css
@@ -7,6 +7,7 @@
 
 #divHeader img {
     max-width: 100%;
+    width: 100%;
     height: auto;     
 }
 
@@ -32,7 +33,8 @@ ul {
   position: relative;
 }
 .liSlider {
-  position: absolute;  
+  position: absolute; 
+    width: 100%;
 }
 
 .liSlider:nth-child(4) {
