--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,21 @@ body {
     font-family: 'Noto Sans', sans-serif;    
 } 
 
+#divCarrerContent-Wrapper {
+    display: flex;   
+    margin-top: 20px; 
+}
+
+#divCarrerContentRight-Wrapper {
+    display: flex;	
+	width: 70%;
+}
+
+#divCarrerContentLeft-Wrapper {
+    display: flex;  
+    width: 30%;
+}
+
 nav li {
     display: inline-block;     
     float: right;
@@ -79,7 +94,6 @@ li a {
     border-bottom: 4px solid #e74c3c;
     color: #e74c3c;
 }
-
 
 a.normalLink:link, a.normalLink:visited {  
     color: white;
@@ -504,6 +518,157 @@ a.normalLink:hover {
     background-color: #ecf0f1;
     display: flex;  
     margin-bottom: 20px;
+    box-shadow: 7px 9px 5px -4px rgba(0,0,0,0.44);
+}
+
+.impressum {
+    text-align: center;
+    padding: 10px;
+}
+
+.txtBus {
+    background-color: darkviolet;
+    color: white;
+    padding: 1px;
+    font-weight: bold;
+
+}
+
+#openPositions {
+    background-color: white;
+    width: 100%;
+    margin-right: 10px;    
+}
+
+#divInfobox {    
+    width: 30%;
+    margin-left: 10px;    
+    display: flex;
+    flex-flow: wrap;
+}
+
+#divInfobox1 {
+    background-color: white;
+    padding: 5px;
+    width: 100%;   
+    margin-bottom: 10px; 
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+#divInfobox2 {
+    background-color: white;
+    width: 100%;    
+    display: flex;
+    flex-flow: column-reverse;
+    
+}
+
+.carrerContactPerson {
+    font-family: 'Open Sans Condensed', sans-serif; 
+    font-size: 20px;
+    color: white;  
+    
+}
+
+#divCarrerBoxTitle {
+    background-color: #007FAB;
+    width: 100%;    
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    letter-spacing: 5px;
+    
+}
+
+#divCarrerContactPersonContext {
+    font-size: 14px;
+    height: 100%;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+#divCarrerOpenPositionsContent {
+    
+    
+}
+
+#openPositionList li:nth-child(even) {
+    background-color: #f2f2f2
+}
+#openPositionList li:hover {
+    background-color: lightgrey !important;
+    color: white;
+    cursor: pointer;   
+}
+
+#openPositionList li {
+    padding-top: 25px;
+    height: 50px;
+    padding-left: 10px;
+    margin: 0 auto;
+    font-size: 16px;     
+    transition: all 0.2s ease-in-out;
+} 
+
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+.fade-in {  
+  opacity:0;  
+  animation:fadeIn ease-in 1;  
+  animation-fill-mode:forwards;  
+  animation-duration:1s;
+}
+
+.fade-in.one {
+    animation-delay: 0.7s;
+}
+
+.fade-in.two {
+    animation-delay: 0.9s;
+}
+
+.fade-in.three {
+    animation-delay: 1.1s;
+}
+
+.fade-in.four {
+    animation-delay: 1.3s;
+}
+
+#backContent1 {
+    display: none;
+}
+
+#backContent2 {
+    display: none;
+}
+
+#backContent3 {
+    display: none;
+}
+
+#backContent4 {
+    display: none;
+}
+
+#event01:hover {
+    cursor: pointer;
+    background-color: lightblue;    
+}
+
+#event02:hover {
+    cursor: pointer;
+    background-color: lightblue;    
 }
 
 
@@ -513,13 +678,12 @@ a.normalLink:hover {
     }
     
     #logo {
-        width: 100%; 
-        height: auto 
+        width: 100%;        
     }
     
     #divLogo {
         width: auto;
-        height: auto;
+        margin-bottom: 15px;
     }
     
     #divTop-wrapper {
@@ -627,18 +791,60 @@ a.normalLink:hover {
         width: 40%;
     }
     
+    .txtBus {
+        font-size: 11px;
+        padding: 0;
+    }
     
+    #divCarrerContent-Wrapper {
+        flex-direction: column;
+        margin-top: 0px;
+    }
+        
+    #divInfobox1 {
+        display: none;
+    }
     
+    #divInfobox {
+        width: 100%;
+        margin-left: 0;
+    }
+    
+    #divCarrerContentRight-Wrapper {
+        flex-flow: column; 
+        width: 100%;
+        margin-top: 20px;    
+    }
+    
+    #divInfobox2 {
+        margin-top: 20px;
+    }
     
     #divAll-Wrapper  {
         width: auto;
         padding: 0;
     }
+    
+    #divCarrerContentLeft-Wrapper {
+    display: grid;  
+    width: 100%;
+    margin-top: 20px;
+    }
+    
+    #day {
+        width: 100%;
+    }
+    
+    #month {
+        width: 100%;
+    }
+
   
 
 }
 
 @media only screen and (max-width: 767px) and (orientation: landscape) {
+    
     #divNav {
         height: 100px;
     }    
@@ -646,12 +852,11 @@ a.normalLink:hover {
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
      #logo {
-        width: 100%; 
-        height: auto 
+       
     }
     
     #divHeader-Wrapper  {
-         height: 250px;
+        
     }
     
     #divLogo {
@@ -767,13 +972,58 @@ a.normalLink:hover {
     
     #divSocialMedia {
         width: 40%;
-    }    
+    }     
     
     #divAll-Wrapper  {
         width: auto;
         padding: 0;
     }
     
+    #locationInfo {
+        padding-bottom: 20px;
+    }
+    
+    #contactUs {
+        font-size: 20px;
+    }
+    
+    #divCarrerContent-Wrapper {
+        flex-direction: column;
+        margin-top: 0px;
+    }   
+    
+    #divInfobox {
+        width: 100%;
+        margin-left: 0;
+        display: flex;
+        flex-flow: row;
+    }
+    
+    #divCarrerContentRight-Wrapper {
+        flex-flow: column; 
+        width: 100%;
+        margin-top: 20px;    
+    }
+    
+    #divInfobox2 {
+        margin-top: 20px;
+    }   
+    
+    #divInfobox1 {
+        margin-bottom: 0;
+        margin-top: 20px;
+        margin-right: 10px;
+    }
+    
+    #divCarrerContentLeft-Wrapper {
+        display: grid;  
+        width: 100%;
+        margin-top: 20px;
+    }
+    
+    .events {
+        width: 400px;
+    }
 }
 
 @media only screen and (max-width: 1025px) and (orientation: landscape) {
@@ -783,7 +1033,7 @@ a.normalLink:hover {
     } 
     
     #divHeader-Wrapper {
-        height: 270px;
+       
     }
     
      #logo {
@@ -797,7 +1047,7 @@ a.normalLink:hover {
     }
     
     #divTop-wrapper {
-        flex-flow: column;
+        flex-flow: row;
     }
     
     nav{
@@ -863,138 +1113,97 @@ a.normalLink:hover {
     }
 }
 
-
-
-
-
-
-
-
-.impressum {
-    text-align: center;
-    padding: 10px;
-}
-
-.txtBus {
-    background-color: darkviolet;
-    color: white;
-    padding: 1px;
-    font-weight: bold;
-
-}
-
-
-
-#openPositions {
-    background-color: white;
-    width: 100%;
-    margin-right: 10px;    
-}
-
-#divInfobox {    
-    width: 30%;
-    margin-left: 10px;    
-    display: flex;
-    flex-flow: wrap;
-}
-
-#divInfobox1 {
-    background-color: white;
-    width: 100%;
-    margin-bottom: 10px;
+@media only screen and (min-width: 1024px) and (max-width: 1450px) {
     
-}
-
-#divInfobox2 {
-    background-color: white;
-    width: 100%;   
-    display: flex;
-    flex-flow: column-reverse;
+    #divNav {
+        
+    } 
     
-}
-
-.carrerContactPerson {
-    font-family: 'Open Sans Condensed', sans-serif; 
-    font-size: 20px;
-    color: white;  
+    #divHeader-Wrapper {
+       
+    }
     
-}
-
-#divCarrerBoxTitle {
-    background-color: #007FAB;
-    width: 100%;    
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    letter-spacing: 5px;
+     #logo {
+        width: 100%; 
+        height: auto 
+    } 
     
-}
-
-#divCarrerContactPersonContext {
-    background-color: black;
-}
-
-#divCarrerOpenPositionsContent {
+    #divLogo {
+        width: auto;
+        height: auto;
+    }
     
+    #divTop-wrapper {
+        flex-flow: row;
+    }
     
+    nav{
+        width: 100%;
+        height: 110px;
+    }
+    
+    #divNav {
+        padding-right: 0;
+    }
+    
+    nav li {
+        width: 20%;        
+        height: 60px;
+    }
+    
+    nav li a {
+        height: 55px;  
+        text-align: center;
+    }
+    
+    nav li a span {
+        font-size: 10px;
+    }
+   
+    .fa {
+        display: flex;          
+    }
+    
+    .fa-home {
+       display: block;
+    }
+    
+    .fa-map-marker {
+        display: block;
+    }
+    
+    .fa-users {
+       display: block;
+    }
+    
+    .fa-calendar-check-o {
+       display: block;
+    }
+    
+    .fa-building {
+        display: block;
+    }
+    
+    #divFooterColumn {
+        flex-direction: row;
+        height: auto;
+    }
+    
+    .footerColumn {       
+        padding: 15px;
+        height: 270px;
+        font-size: 10px;
+    }
 }
 
-#openPositionList li:nth-child(even) {
-    background-color: #f2f2f2
-}
-#openPositionList li:hover {
-    background-color: lightgrey !important;
-    color: white;
-    cursor: pointer;   
-}
 
-#openPositionList li {
-    padding-top: 25px;
-    height: 50px;
-    padding-left: 10px;
-    margin: 0 auto;
-    font-size: 16px;     
-    transition: all 0.2s ease-in-out;
-} 
 
-@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 
-.fade-in {  
-  opacity:0;  
-  animation:fadeIn ease-in 1;  
-  animation-fill-mode:forwards;  
-  animation-duration:1s;
-}
 
-.fade-in.one {
-    animation-delay: 0.7s;
-}
 
-.fade-in.two {
-    animation-delay: 0.9s;
-}
 
-.fade-in.three {
-    animation-delay: 1.1s;
-}
 
-.fade-in.four {
-    animation-delay: 1.3s;
-}
 
-#backContent1 {
-    display: none;
-}
 
-#backContent2 {
-    display: none;
-}
 
-#backContent3 {
-    display: none;
-}
 
-#backContent4 {
-    display: none;
-}
