--- a/css/style.css
+++ b/css/style.css
@@ -460,8 +460,7 @@ a.normalLink:hover {
 
 #month {
     background-color: #34495e;
-    color: white;
-    width: 150px;
+    color: white;  
     height: 30px;
     display: flex;
     align-items: center;
@@ -471,8 +470,7 @@ a.normalLink:hover {
 #day {
     background-color: #2c3e50;
     color: white;
-    font-size: 60px;
-    width: 150px;
+    font-size: 60px;   
     height: 120px;
     display: flex;
     align-items: center;
@@ -541,7 +539,7 @@ a.normalLink:hover {
 }
 
 #divInfobox {    
-    width: 30%;
+    width: 40%;
     margin-left: 10px;    
     display: flex;
     flex-flow: wrap;
@@ -551,8 +549,7 @@ a.normalLink:hover {
     background-color: white;
     padding: 5px;
     width: 100%;   
-    margin-bottom: 10px; 
-    display: flex;
+    margin-bottom: 10px;     
     flex-direction: column;
     text-align: center;
     align-items: center;
@@ -647,18 +644,22 @@ a.normalLink:hover {
 
 #backContent1 {
     display: none;
+    height: 293.33px;
 }
 
 #backContent2 {
     display: none;
+    height: 293.33px;
 }
 
 #backContent3 {
     display: none;
+    height: 293.33px;
 }
 
 #backContent4 {
     display: none;
+    height: 293.33px;
 }
 
 #event01:hover {
@@ -851,13 +852,6 @@ a.normalLink:hover {
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-     #logo {
-       
-    }
-    
-    #divHeader-Wrapper  {
-        
-    }
     
     #divLogo {
         width: auto;
@@ -997,7 +991,7 @@ a.normalLink:hover {
         margin-left: 0;
         display: flex;
         flex-flow: row;
-    }
+    } 
     
     #divCarrerContentRight-Wrapper {
         flex-flow: column; 
@@ -1194,16 +1188,13 @@ a.normalLink:hover {
         height: 270px;
         font-size: 10px;
     }
+    
+    #day {
+        width: auto;
+    }
+    
+    #month {
+        width: auto;
+    }
+    
 }
-
-
-
-
-
-
-
-
-
-
-
-
